; ModuleID = '/home/carl/AnghaBench/libgit2/src/extr_index.c_git_index_name_add.c'
source_filename = "/home/carl/AnghaBench/libgit2/src/extr_index.c_git_index_name_add.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_9__ = type { i32, i32 }
%struct.TYPE_8__ = type { i8*, i8*, i8* }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @git_index_name_add(%struct.TYPE_9__* %0, i8* %1, i8* %2, i8* %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca %struct.TYPE_9__*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i8*, align 8
  %10 = alloca %struct.TYPE_8__*, align 8
  store %struct.TYPE_9__* %0, %struct.TYPE_9__** %6, align 8
  store i8* %1, i8** %7, align 8
  store i8* %2, i8** %8, align 8
  store i8* %3, i8** %9, align 8
  %11 = load i8*, i8** %7, align 8
  %12 = icmp ne i8* %11, null
  br i1 %12, label %13, label %16

13:                                               ; preds = %4
  %14 = load i8*, i8** %8, align 8
  %15 = icmp ne i8* %14, null
  br i1 %15, label %30, label %16

16:                                               ; preds = %13, %4
  %17 = load i8*, i8** %7, align 8
  %18 = icmp ne i8* %17, null
  br i1 %18, label %19, label %22

19:                                               ; preds = %16
  %20 = load i8*, i8** %9, align 8
  %21 = icmp ne i8* %20, null
  br i1 %21, label %30, label %22

22:                                               ; preds = %19, %16
  %23 = load i8*, i8** %8, align 8
  %24 = icmp ne i8* %23, null
  br i1 %24, label %25, label %28

25:                                               ; preds = %22
  %26 = load i8*, i8** %9, align 8
  %27 = icmp ne i8* %26, null
  br label %28

28:                                               ; preds = %25, %22
  %29 = phi i1 [ false, %22 ], [ %27, %25 ]
  br label %30

30:                                               ; preds = %28, %19, %13
  %31 = phi i1 [ true, %19 ], [ true, %13 ], [ %29, %28 ]
  %32 = zext i1 %31 to i32
  %33 = call i32 @assert(i32 %32)
  %34 = call %struct.TYPE_8__* @git__calloc(i32 1, i32 24)
  store %struct.TYPE_8__* %34, %struct.TYPE_8__** %10, align 8
  %35 = load %struct.TYPE_8__*, %struct.TYPE_8__** %10, align 8
  %36 = call i32 @GIT_ERROR_CHECK_ALLOC(%struct.TYPE_8__* %35)
  %37 = load i8*, i8** %7, align 8
  %38 = icmp ne i8* %37, null
  br i1 %38, label %39, label %45

39:                                               ; preds = %30
  %40 = load i8*, i8** %7, align 8
  %41 = call i8* @git__strdup(i8* %40)
  %42 = load %struct.TYPE_8__*, %struct.TYPE_8__** %10, align 8
  %43 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %42, i32 0, i32 2
  store i8* %41, i8** %43, align 8
  %44 = icmp ne i8* %41, null
  br i1 %44, label %45, label %69

45:                                               ; preds = %39, %30
  %46 = load i8*, i8** %8, align 8
  %47 = icmp ne i8* %46, null
  br i1 %47, label %48, label %54

48:                                               ; preds = %45
  %49 = load i8*, i8** %8, align 8
  %50 = call i8* @git__strdup(i8* %49)
  %51 = load %struct.TYPE_8__*, %struct.TYPE_8__** %10, align 8
  %52 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %51, i32 0, i32 1
  store i8* %50, i8** %52, align 8
  %53 = icmp ne i8* %50, null
  br i1 %53, label %54, label %69

54:                                               ; preds = %48, %45
  %55 = load i8*, i8** %9, align 8
  %56 = icmp ne i8* %55, null
  br i1 %56, label %57, label %63

57:                                               ; preds = %54
  %58 = load i8*, i8** %9, align 8
  %59 = call i8* @git__strdup(i8* %58)
  %60 = load %struct.TYPE_8__*, %struct.TYPE_8__** %10, align 8
  %61 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %60, i32 0, i32 0
  store i8* %59, i8** %61, align 8
  %62 = icmp ne i8* %59, null
  br i1 %62, label %63, label %69

63:                                               ; preds = %57, %54
  %64 = load %struct.TYPE_9__*, %struct.TYPE_9__** %6, align 8
  %65 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %64, i32 0, i32 1
  %66 = load %struct.TYPE_8__*, %struct.TYPE_8__** %10, align 8
  %67 = call i64 @git_vector_insert(i32* %65, %struct.TYPE_8__* %66)
  %68 = icmp slt i64 %67, 0
  br i1 %68, label %69, label %72

69:                                               ; preds = %63, %57, %48, %39
  %70 = load %struct.TYPE_8__*, %struct.TYPE_8__** %10, align 8
  %71 = call i32 @index_name_entry_free(%struct.TYPE_8__* %70)
  store i32 -1, i32* %5, align 4
  br label %75

72:                                               ; preds = %63
  %73 = load %struct.TYPE_9__*, %struct.TYPE_9__** %6, align 8
  %74 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %73, i32 0, i32 0
  store i32 1, i32* %74, align 4
  store i32 0, i32* %5, align 4
  br label %75

75:                                               ; preds = %72, %69
  %76 = load i32, i32* %5, align 4
  ret i32 %76
}

declare dso_local i32 @assert(i32) #1

declare dso_local %struct.TYPE_8__* @git__calloc(i32, i32) #1

declare dso_local i32 @GIT_ERROR_CHECK_ALLOC(%struct.TYPE_8__*) #1

declare dso_local i8* @git__strdup(i8*) #1

declare dso_local i64 @git_vector_insert(i32*, %struct.TYPE_8__*) #1

declare dso_local i32 @index_name_entry_free(%struct.TYPE_8__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
